# Recall-OS

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PROJECT_ROADMAP.md  README.md  RELEASE_NOTES.md  SUPPORT.md  index.html  package-lock.json  package.json  run-dev.bat  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: index.html
scripts/: generate-icons.mjs  generate-installer-images.cjs
src/: App.tsx  NotificationWindow.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: hooks.nsh
src-tauri/resources/: .gitkeep
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/capture/: capturer.rs  filter.rs  mod.rs  scheduler.rs
src-tauri/src/commands/: capture.rs  conversations.rs  database.rs  ingestion.rs  license.rs  mod.rs  notification.rs  rag.rs  search.rs  settings.rs  watcher.rs
src-tauri/src/database/: migrations.rs  mod.rs  models.rs  queries.rs
src-tauri/src/ingestion/: chunker.rs  extractor.rs  ffmpeg.rs  mod.rs  watcher.rs  watcher_manager.rs  windows_ocr.rs
src-tauri/src/llm/: client.rs  embedding.rs  mod.rs  rate_limiter.rs
src-tauri/src/notifications/: aumid.rs  mod.rs  toast.rs  window.rs
src-tauri/src/rag/: mod.rs  retriever.rs
src/components/: AudioPlayer.tsx  ChatPanel.tsx  CitationChip.tsx  HelpModal.tsx  LicenseModal.tsx  PdfViewer.tsx  ScreenCaptureSettings.tsx  SettingsModal.tsx  Sidebar.tsx  SourcePanel.tsx  Toast.tsx  VideoPlayer.tsx
src/hooks/: useCapture.ts  useConversations.ts  useDocuments.ts  useLicense.ts  useRag.ts  useSettings.ts  useWatcher.ts
